@@ -3,3 +3,4 @@
 - (more) tests
 - OPT:: doesnt read from params
 - ADP_NODE : NODE?
+- measurements: make measurement object to make preparse possible.
