@@ -1,6 +1,4 @@
 * load my non-GPL modules.
 .load libd_rcd_sym.so
-.load libd_rcd_sym_v2.so
-.load libd_rcd_sym_v3.so
 .load libd_bti_inf.so
 
