@@ -28,7 +28,7 @@ namespace {
 /*--------------------------------------------------------------------------*/
 class MEASURE : public FUNCTION {
 public:
-  std::string eval(CS& Cmd, const CARD_LIST* Scope)const
+  fun_t eval(CS& Cmd, const CARD_LIST* Scope)const
   {
     std::string probe_name;
     PARAMETER<double> before(BIGBIG);
@@ -102,7 +102,7 @@ public:
 	  break;
 	};
       }
-      return to_string(x_time);
+      return to_fun_t(x_time);
     }else{
       throw Exception_No_Match(probe_name);
     }
