@@ -30,14 +30,14 @@ namespace {
 /*--------------------------------------------------------------------------*/
 class MEASURE : public FUNCTION {
 public:
-  std::string eval(CS& Cmd, const CARD_LIST* Scope)const
+  fun_t eval(CS& Cmd, const CARD_LIST* Scope)const
   {
     trace0("eval");
     PARAMETER<double> arg;
     Cmd >> arg;
     arg.e_val(BIGBIG, Scope);
      // std::cout << to_string(double(arg));
-    return to_string(double(arg));
+    return to_fun_t(double(arg));
   }
 } p1;
 DISPATCHER<FUNCTION>::INSTALL d1(&measure_dispatcher, "eval", &p1);
