@@ -28,7 +28,7 @@ namespace {
 /*--------------------------------------------------------------------------*/
 class MEASURE : public FUNCTION {
 public:
-  std::string eval(CS& Cmd, const CARD_LIST* Scope)const
+  fun_t eval(CS& Cmd, const CARD_LIST* Scope)const
   {
     std::string probe_name;
     PARAMETER<double> before(BIGBIG);
@@ -74,7 +74,7 @@ public:
 	  * (i->first - lower->first);
 	lower = i;
       }
-      return to_string(sqrt(area/(lower->first - begin->first)));
+      return to_fun_t(sqrt(area/(lower->first - begin->first)));
     }else{
       throw Exception_No_Match(probe_name);
     }
