@@ -17,3 +17,5 @@
   - printrejected simplifies figuring out rejects.
   - some tolarance values
 - powerof from gnucap-a merged
+- fixed measurements to return double (not string)
+   ( if strings are needed, templates should be used )
